<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>This package contains custom ROS 2 messages for serialization demo.</description>

  <maintainer email="mccatik@gmail.com">cc</maintainer>
  <license>Apache-2.0</license> <!-- You should replace with your actual license -->

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for message packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
